refined